AIO/kong/kubernetes/kong-deployment.yaml
apiVersion: apps/v1
# ===============LICENSE_START=======================================================
# Acumos Apache-2.0
# ===================================================================================
# Copyright (C) 2017-2018 AT&T Intellectual Property & Tech Mahindra. All rights reserved.
# ===================================================================================
# This Acumos software file is distributed by AT&T and Tech Mahindra
# under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# This file is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ===============LICENSE_END=========================================================

# What this is: kubernetes template for Acumos kong deployment
# How to use:

kind: Deployment
metadata:
  namespace: <ACUMOS_NAMESPACE>
  name: kong
  labels:
    app: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
      - name: kong-database
        image: postgres:9.5
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: kong-db
      - name: kong
        image: kong:0.11
        ports:
        - containerPort: 8000
        - containerPort: 8443
        - containerPort: 81
        - containerPort: 444
        command: ['/bin/bash', '-c', 'until [[ $$(curl -v http://localhost:5432 2>&1 | grep -c "Connected to ") -gt 0 ]]; do echo "kong-database is unavailable - sleeping 10 seconds"; sleep 10; done; sed -i -- "s/\ \ \ \ proxy_max_temp_file_size 0;//" /usr/local/share/lua/5.1/kong/templates/nginx_kong.lua; sed -i -- "/server {/a\ \ \ \ proxy_max_temp_file_size 0;" /usr/local/share/lua/5.1/kong/templates/nginx_kong.lua; kong migrations up; kong start -vv; kong health -vv; echo Connected!; sleep 3 [...]
      restartPolicy: Always
      volumes:
      - name: kong-db
        hostPath:
          path: /var/<ACUMOS_NAMESPACE>/kong-db
# TODO: debug access issues with PVC
#        persistentVolumeClaim:
#         claimName: pvc-<ACUMOS_NAMESPACE>-kong-db
      hostAliases:
      - ip: "<ACUMOS_HOST_IP>"
        hostnames:
        - "<ACUMOS_HOST>"
