AIO/kong/kubernetes/kong-service.yaml
apiVersion: v1
# ===============LICENSE_START=======================================================
# Acumos Apache-2.0
# ===================================================================================
# Copyright (C) 2017-2018 AT&T Intellectual Property & Tech Mahindra. All rights reserved.
# ===================================================================================
# This Acumos software file is distributed by AT&T and Tech Mahindra
# under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# This file is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ===============LICENSE_END=========================================================

# What this is: kubernetes template for Acumos portal-fe service
# How to use:

kind: Service
metadata:
  namespace: <ACUMOS_NAMESPACE>
  name: kong-service
  labels:
    app: kong
spec:
  selector:
    app: kong
  type: NodePort
  ports:
  - name: kong-proxy-ssl-port
    nodePort: <ACUMOS_KONG_PROXY_SSL_PORT>
    port: 8443
    targetPort: 8443
